src/objects/pca__Setting__c.object
<CustomObject>
    <description>Postcode Anywhere Account Settings</description>
    <fields>
        <fullName>pca__Account_Code__c</fullName>
        <label>Account Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__BACS_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow the use of BACS data to validate UK bank account details.</inlineHelpText>
        <label>Payment Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Click_License__c</fullName>
        <inlineHelpText>Your Postcode Anywhere Key suitable for internal web service transactions. It should be in the format AA11-AA11-AA11-AA11.</inlineHelpText>
        <label>Key</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Country_List__c</fullName>
        <defaultValue>&apos;ALA,AFG,ALB,DZA,ASM,AND,AGO,AIA,ATA,ATG,ARG,ARM,ABW,AUS,AUT,AZE,BHS,BHR,BGD,BRB,BLR,BEL,BLZ,BEN,BMU,BTN,BOL,BIH,BWA,BVT,BRA,IOT,VGB,BRN,BGR,BFA,BDI,KHM,CMR,CAN,CPV,CYM,CAF,TCD,CHL,CHN,CXR,CCK,COL,COM,COG,COK,CRI,CIV,HRV,CUB,CYP,CZE,COD,DNK,DJI,DMA,DOM,ECU,EGY,SLV,GNQ,ERI,EST,ETH,FLK,FRO,FJI,FIN,FRA,GUF,PYF,ATF,GAB,GMB,GEO,DEU,GHA,GIB,GRC,GRL,GRD,GLP,GUM,GTM,GGY,GIN,GNB,GUY,HTI,HMD,HND,HKG,HUN,ISL,IND,IDN,IRN,IRQ,IRL,IMN,ISR,ITA,JAM,JPN,JEY,JOR,KAZ,KEN,KIR,KWT,KGZ,LAO,LVA,LBN,LSO,LBR,LBY,LIE,LTU,LUX,MAC,MKD,MDG,MWI,MYS,MDV,MLI,MLT,MHL,MTQ,MRT,MUS,MYT,MEX,FSM,MDA,MCO,MNG,MSR,MAR,MOZ,MMR,NAM,NRU,NPL,NLD,ANT,NCL,NZL,NIC,NER,NGA,NIU,NFK,PRK,MNP,NOR,OMN,PAK,PLW,PSE,PAN,PNG,PRY,PER,PHL,PCN,POL,PRT,PRI,QAT,REU,ROU,RUS,RWA,SHN,KNA,LCA,SPM,VCT,WSM,SMR,STP,SAU,SEN,SCG,SYC,SLE,SGP,SVK,SVN,SLB,SOM,ZAF,SGS,KOR,ESP,LKA,SDN,SUR,SJM,SWZ,SWE,CHE,SYR,TWN,TJK,TZA,THA,TLS,TGO,TKL,TON,TTO,TUN,TUR,TKM,TCA,TUV,UGA,UKR,ARE,GBR,UMI,USA,URY,VIR,UZB,VUT,VAT,VEN,VNM,WLF,ESH,YEM,ZMB,ZWE&apos;</defaultValue>
        <label>Country List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pca__Country_Name_Style__c</fullName>
        <inlineHelpText>Change how country names are saved, either the full name (United States of America, Canada, United Kingdom), the ISO3 code (USA, CAN, GBR) or the ISO2 code (US, CA, GB) can be selected.</inlineHelpText>
        <label>Country Name Style</label>
        <picklist>
            <picklistValues>
                <fullName>Full Country Name (default)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3 Character ISO Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Character ISO Code</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pca__Default_User_Country__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected the control will attempt to use the user country as the default</inlineHelpText>
        <label>Default User Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Disable_City_Search__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked the control will not show the search dialogue for the city field</inlineHelpText>
        <label>Disable City Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Disable_Company_Search__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked the control will not show the search dialogue for the company field</inlineHelpText>
        <label>Disable Company Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Disable_Country_List__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked the app will not replace the standard country field with a picklist. Choose this option if you wish to use your own picklist.</inlineHelpText>
        <label>Disable Country List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Disable_Field_Rearrange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked the app will not rearrange standard address fields. Custom address fields will not be rearranged regardless of this setting, and should be arranged manually for address lookup.</inlineHelpText>
        <label>Disable Standard Field Rearrange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Disable_Other_Country_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked the app will not add an &apos;Other&apos; option to the country list. The &apos;Other&apos; option is used to enter a free text country name when the desired country does not appear in the list.</inlineHelpText>
        <label>Disable Other Country Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Disable_Postcode_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the control will not show the search dialogue for the zip / postalcode field</inlineHelpText>
        <label>Disable Postcode Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Disable_State_Search__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked the control will not show the search dialogue for the state / province field</inlineHelpText>
        <label>Disable State Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Disable_Street_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the control will not show the search dialogue for the street field</inlineHelpText>
        <label>Disable Street Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Email_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow the use of advanced email validation which checks for the mail exchanger (MX) records of the responsible email server to catch spelling mistakes and incorrect domains.</inlineHelpText>
        <label>Email Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Hide_Sidebar_Component__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selecting this option will hide the Postcode Anywhere sidebar component while allowing the app to still function on edit pages.</inlineHelpText>
        <label>Hide Sidebar Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Royal_Mail_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the company field specified in the address integration will be updated with the company name from the Royal Mail record.</inlineHelpText>
        <label>Royal Mail Update Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Royal_Mail_Reverse__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable reverse lookups so that company or partial addresses can be used to search for address records rather than just postcode. This can be used by filling out the company name or partial address and clicking &apos;Find&apos;.</inlineHelpText>
        <label>Royal Mail Reverse Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__USPS_Reverse__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable reverse lookups so that company and partial addresses can be used to search for address records rather than just zip code. This can be used by filling out a partial address and clicking &apos;Find&apos;.</inlineHelpText>
        <label>USPS Reverse Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Use_Business_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable Dun &amp; Bradstreet business data searches. This will add a Postcode Anywhere icon next to the company name field specified in the business integration record to initiate the search.</inlineHelpText>
        <label>Business Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Use_Hierarchy_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable hierarchy data to imported for Dun &amp; Bradstreet business data records. This includes parent DUNS, global ultimate DUNS and domestic DUNS for building account hierarchies.</inlineHelpText>
        <label>Business Hierarchy Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Use_International_Data__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allow the system to use International address data for searches.</inlineHelpText>
        <label>International Searches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Use_Royal_Mail_UK_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow the system to use the more accurate Royal Mail Postcode Address data for UK searches.</inlineHelpText>
        <label>Royal Mail Searches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Use_USPS_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow the system to use the more accurate USPS data for US searches.</inlineHelpText>
        <label>USPS Searches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__User_License__c</fullName>
        <inlineHelpText>Your Postcode Anywhere Key suitable for Royal Mail transactions (required if Royal Mail Searches are selected). It should be in the format AA11-AA11-AA11-AA11. If you are unsure or use internal credits then use your standard key here as well.</inlineHelpText>
        <label>Royal Mail Key (UK Only)</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <label>Setting</label>
    <nameField>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>